tests/ui/proc-macro/issue-37788.stderr
error[E0308]: mismatched types
  --> $DIR/issue-37788.rs:8:5
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     // Test that constructing the `visible_parent_map` (in `cstore_impl.rs`) does not ICE.
LL |     std::cell::Cell::new(0)
   |     ^^^^^^^^^^^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |     |
   |     expected `()`, found `Cell<{integer}>`
   |
   = note: expected unit type `()`
                 found struct `Cell<{integer}>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
